a1/brendan_gordon/TEST_PROGRAMS/invalidtype/AMIEL_KOLLEK/bad_if.min
# This minilang program uses a bad if condition

var x: int;
var y: int;
var z: string;

x = 1;
y = 50;
z = "";

if z then
    x = y*y;
endif


